--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,6 @@
 name: Python CI
 
+# Runs on pushes and pull requests to the main branch
 on:
   push:
     branches: [ main ]
@@ -7,10 +8,9 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
+  Full pytest test:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -25,15 +25,42 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
     - name: Run tests
       run: |
         pip install pytest
         pytest
+  
+  Partial pytest test:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+    - name: Check for changes in 'tests' folder
+        id: check_new_tests
+        run: |
+          if git diff origin/main | grep -q "^tests/"; then
+            echo "tests folder changed"
+            echo "RUN_TESTS=true" >> $GITHUB_ENV
+          else
+            echo "tests folder not changed"
+            echo "RUN_TESTS=false" >> $GITHUB_ENV
+          fi
+
+    - name: Run tests
+      if: env.RUN_TESTS == 'true'
+      run: |
+        pip install pytest
+        pytest 
+
