--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
-name: Python CI
+name: Pytest CI
 
-# Runs on pushes and pull requests to the main branch
-on:
+# Runs on pushes and merges to the main branch
+# and on pushes to pull requests targeting the main branch
   push:
     branches: [ main ]
   pull_request:
@@ -30,7 +30,7 @@ jobs:
         pip install pytest
         pytest
   
-  partial_pytest_test:
+  conditional_pytest_test:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
