--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,8 @@ jobs:
 
     - name: Check for changes in tests folder
       run: |
-        if git diff --name-only origin/main | grep -q "a/tests/"; then
+        git fetch origin main
+        if git diff --name-only origin/main | grep -q "^tests/"; then
           echo "tests folder changed"
           echo "RUN_TESTS=true" >> $GITHUB_ENV
         else
